kubernetes/apps/network/static-routes/app/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app unifi
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: unifi.
  ports:
    - name: http
      port: &port 8080
      protocol: TCP
      targetPort: *port
