kubernetes/apps/network/static-routes/app/unifi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: network
  annotations:
    ingress.home.arpa/type: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
spec:
  ingressClassName: nginx
  rules:
    - host: &host unifi.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8443
  tls:
    - hosts:
        - *host
